dev/test_programs/INVALID/group12/scan_parse_errors/nested_func_error.go
// nested function

package main

func main() {
	func print() {
		print()
	}
}